@@ -18,6 +18,7 @@
  * Link to the GENI Glossary to explain project and slice roles. (#558)
  * Change subject on project join request email (fix grammar). (#1083)
  * Warn on missing slice name to createslice. (#1028)
+ * Allow specifying the "site" for GENI Desktop (stable vs ....). (#1113)
 
 == 2.17.1 ==
  * Allow the OpenID WiMAX username attribute to be wimax/wimax_username. (#1097)
